# ts_ess_controller

./: .gitignore  Dockerfile  Jenkinsfile  Jenkinsfile.conda  README.rst  SConstruct  pyproject.toml  setup.cfg  setup.py
conda/: meta.yaml
doc/: SPS30.feature.rst  add_a_new_sensor.rst  auroracloud_sensor.rst  boltek_EFM-100C_sensor.rst  boltek_LD-250_sensor.rst  campbellscientific_CSAT3BH_sensor.rst  conf.py  documenteer.toml  gil_windsonic_2-d_sonic_wind_sensor.rst  gill_windsonic_2-d_sonic_wind_sensor.rst  index.rst  manifest.yaml  omega_hx85a_sensor.rst  omega_hx85ba_sensor.rst  sel_temperature_sensor.rst  version_history.rst  young_weather_station.rst
doc/lsst.ts.ess.sensors/: index.rst
doc/news/: OSW-1120.bugfix.rst  OSW-1346.perf.rst  OSW-1473.bugfix.rst  OSW-1473.perf.rst  (+10 more)
examples/: ess_instrument_object.py  sel_temperature_reader.py  test_pihat_instr.py
sps30_driver/: Makefile  run_sps30  run_sps30.c  sps30_example_usage  sps30_reader.c
tests/: __init__.py  base_mock_test_case.py  base_real_sensor_mock_test_case.py  test_command_handler.py  test_config_schema.py  test_csv.py  test_ess_instrument_object.py  test_mock_device.py  test_mock_hb85a_device.py  test_mock_hb85ba_device.py  test_mock_temperature_device.py  test_mock_temperature_sensor.py  test_omega_hx85a_sensor.py  test_omega_hx85ba_sensor.py  test_rpi_serial_hat.py  test_sel_temperature_reader.py  test_sensirion_sps30.py  test_socket_server.py  test_temperature_sensor.py  test_vcp_ftdi.py  test_wind_sensor.py
ups/: ts_envsensors.table  ts_ess_controller.table  ts_ess_sensors.table
(+87 files in other folders)
