[aliases]
test=pytest

[flake8]
max-line-length = 110
max-doc-length = 79
ignore = E133, E226, E228, N802, N803, N806, N812, N813, N815, N816, W503, E203, F401, F403, F405
exclude =
  doc,
  __init__.py,
  tests/.tests

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True

[tool:pytest]
addopts = --flake8 --black --mypy --ignore-glob="**/test_*_instr.py"
flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N813 N815 N816 W503 E203 F401 F403 F405

[metadata]
version = attr: setuptools_scm.get_version
